# cmake-playground

./: CMakeLists.txt  main.cpp
LibA/: CMakeLists.txt
LibA/include/: lib_a.h
LibB/: CMakeLists.txt
LibB/include/: lib_b.h
LibBNew/: CMakeLists.txt
LibBNew/include/: lib_b.h
